--- a/app/src/main/res/layout/content_add.xml
+++ b/app/src/main/res/layout/content_add.xml
@@ -4,20 +4,185 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="fueltrack.jklotz.jklotz_fueltrack.addActivity"
-    tools:showIn="@layout/activity_add">
+    tools:showIn="@layout/activity_add"
+    android:paddingLeft="10dp"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp">
+
+    <!--Label and fill in space for Date-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lblDate"
+        android:id="@+id/lblDate"
+        android:textSize="15sp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:paddingLeft="5dp"
+        android:paddingTop="10dp"
+        android:paddingRight="0dp"
+        android:paddingBottom="10dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="date"
+        android:textSize="15sp"
+        android:ems="11"
+        android:id="@+id/txtDate"
+        android:layout_alignBottom="@+id/lblDate"
+        android:layout_toEndOf="@+id/lblDate" />
+
+    <!--Label and fill in space for Station-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lblStation"
+        android:id="@+id/lblStation"
+        android:layout_below="@+id/lblDate"
+        android:textSize="15sp"
+        android:layout_alignStart="@+id/lblDate"
+        android:paddingLeft="5dp"
+        android:paddingTop="10dp"
+        android:paddingRight="0dp"
+        android:paddingBottom="10dp"/>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:textSize="15sp"
+        android:ems="10"
+        android:id="@+id/txtStation"
+        android:layout_alignBottom="@+id/lblStation"
+        android:layout_alignRight="@id/txtDate"
+        android:layout_toEndOf="@+id/lblStation" />
+
+    <!--Label and fill in space for Odometer Reading-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lblOdometer"
+        android:id="@+id/lblOdometer"
+        android:layout_below="@+id/lblStation"
+        android:textSize="15sp"
+        android:layout_alignStart="@+id/lblStation"
+        android:paddingLeft="5dp"
+        android:paddingTop="10dp"
+        android:paddingRight="0dp"
+        android:paddingBottom="10dp"/>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
+        android:textSize="15sp"
+        android:ems="10"
+        android:id="@+id/txtOdometer"
+        android:layout_alignBottom="@+id/lblOdometer"
+        android:layout_alignRight="@id/txtStation"
+        android:layout_toEndOf="@+id/lblOdometer" />
+
+    <!--Label and fill in space for Fuel Grade-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lblFuelGrade"
+        android:id="@+id/lblFuelGrade"
+        android:layout_below="@+id/lblOdometer"
+        android:textSize="15sp"
+        android:layout_alignStart="@+id/lblOdometer"
+        android:paddingLeft="5dp"
+        android:paddingTop="10dp"
+        android:paddingRight="0dp"
+        android:paddingBottom="10dp"/>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:textSize="15sp"
+        android:ems="10"
+        android:id="@+id/txtFuelGrade"
+        android:layout_alignBottom="@+id/lblFuelGrade"
+        android:layout_alignRight="@id/txtOdometer"
+        android:layout_toEndOf="@+id/lblFuelGrade" />
+
+    <!--Label and fill in space for Fuel Amount-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lblFuelAmount"
+        android:id="@+id/lblFuelAmount"
+        android:layout_below="@+id/lblFuelGrade"
+        android:textSize="15sp"
+        android:layout_alignStart="@+id/lblFuelGrade"
+        android:paddingLeft="5dp"
+        android:paddingTop="10dp"
+        android:paddingRight="0dp"
+        android:paddingBottom="10dp"/>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:textSize="15sp"
+        android:ems="10"
+        android:id="@+id/txtFuelAmount"
+        android:layout_alignBottom="@+id/lblFuelAmount"
+        android:layout_alignRight="@id/txtFuelGrade"
+        android:layout_toEndOf="@+id/lblFuelAmount" />
+
+    <!--Label and fill in space for Fuel Unit Cost-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lblFuelUnitCost"
+        android:id="@+id/lblFuelUnitCost"
+        android:layout_below="@+id/lblFuelAmount"
+        android:textSize="15sp"
+        android:layout_alignStart="@+id/lblFuelAmount"
+        android:paddingLeft="5dp"
+        android:paddingTop="10dp"
+        android:paddingRight="0dp"
+        android:paddingBottom="10dp"/>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:textSize="15sp"
+        android:ems="10"
+        android:id="@+id/txtFuelUnitCost"
+        android:layout_alignBottom="@+id/lblFuelUnitCost"
+        android:layout_alignRight="@id/txtFuelAmount"
+        android:layout_toEndOf="@+id/lblFuelUnitCost" />
+
+    <!--Label and fill in space for Fuel Cost - calculated from Fuel Amount and Unit Cost-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lblFuelCost"
+        android:id="@+id/lblFuelCost"
+        android:layout_below="@+id/lblFuelUnitCost"
+        android:textSize="15sp"
+        android:layout_alignStart="@+id/lblFuelUnitCost"
+        android:paddingLeft="5dp"
+        android:paddingTop="10dp"
+        android:paddingRight="0dp"
+        android:paddingBottom="10dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Test"
-        android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:text="@string/txtFuelCost"
+        android:id="@+id/txtFuelCost"
+        android:textSize="15sp"
+        android:layout_alignBottom="@+id/lblFuelCost"
+        android:layout_alignRight="@id/txtFuelUnitCost"
+        android:layout_toEndOf="@+id/lblFuelCost" />
+
 </RelativeLayout>
