--- a/app/src/main/res/layout/content_add.xml
+++ b/app/src/main/res/layout/content_add.xml
@@ -10,6 +10,20 @@
     android:paddingTop="10dp"
     android:paddingBottom="10dp">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/titleAdd"
+        android:id="@+id/titleAdd"
+        android:textSize="30sp"
+        android:textAlignment="center"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignEnd="@+id/txtDate"
+        android:paddingBottom="15dp"
+        android:paddingTop="1dp"/>
+
     <!--Label and fill in space for Date-->
     <TextView
         android:layout_width="wrap_content"
@@ -17,10 +31,8 @@
         android:text="@string/lblDate"
         android:id="@+id/lblDate"
         android:textSize="15sp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
+        android:layout_below="@+id/titleAdd"
         android:paddingLeft="5dp"
         android:paddingTop="10dp"
         android:paddingRight="0dp"
@@ -128,7 +140,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="text"
+        android:inputType="numberDecimal"
         android:textSize="15sp"
         android:ems="10"
         android:id="@+id/txtFuelAmount"
@@ -153,7 +165,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="text"
+        android:inputType="numberDecimal"
         android:textSize="15sp"
         android:ems="10"
         android:id="@+id/txtFuelUnitCost"
@@ -183,6 +195,30 @@
         android:textSize="15sp"
         android:layout_alignBottom="@+id/lblFuelCost"
         android:layout_alignRight="@id/txtFuelUnitCost"
-        android:layout_toEndOf="@+id/lblFuelCost" />
+        android:layout_toEndOf="@+id/lblFuelCost"
+        android:paddingLeft="5dp"
+        android:paddingTop="10dp"
+        android:paddingRight="0dp"
+        android:paddingBottom="10dp"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="90dp"
+        android:layout_marginRight="5dp"
+        android:text="@string/btnSave"
+        android:id="@+id/btnSave"
+        android:layout_below="@+id/txtFuelCost" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="50dp"
+        android:text="@string/btnCancel"
+        android:id="@+id/btnCancel"
+        android:layout_below="@+id/txtFuelCost"
+        android:layout_toEndOf="@id/btnSave"
+        android:layout_alignTop="@id/btnSave"/>
 
 </RelativeLayout>
